# streamlitgo

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
streamlitgo/: cli.py
streamlitgo/config/: stgo.py
tests/: stgo.py  test_run.py
