[tool.poetry]
name = "streamlitgo"
version = "0.1.0"
description = ""
authors = ["paleneutron <paleneutron@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,!=3.9.7"
streamlit = "^1.23"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.scripts]
streamlitgo = "streamlitgo.cli:main"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.flake8]
exclude = ".venv"

# add --capture=tee-sys option to pytest
[tool.pytest.ini_options]
addopts = "--capture=tee-sys"